# toygrad

./: README.md  pyproject.toml  walkthrough.ipynb
toygrad/: engine.py  nn.py  utils.py  visuals.py
