[tool.poetry]
name = "micrograd"
version = "0.1.0"
description = "A walkthrough implementation of Andrej Karpathy video"
authors = ["Dudu Lasry <davidlasry696@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
matplotlib = "^3.6.2"
ipykernel = "^6.20.0"
graphviz = "^0.20.1"
scikit-learn = "^1.2.0"

[tool.poetry.dev-dependencies]
notebook = "^6.5.2"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
